--- a/resources/demo-app/numaplane.numaproj.io_v1alpha1_monovertexrollout.yaml
+++ b/resources/demo-app/numaplane.numaproj.io_v1alpha1_monovertexrollout.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   monoVertex:
     spec:
+      scale:
+        min: 1
+        max: 1
       source:
         udsource:
           container:
