--- a/resources/demo-app/MonoVertexRollout.yaml
+++ b/resources/demo-app/MonoVertexRollout.yaml
@@ -3,6 +3,8 @@ kind: MonoVertexRollout
 metadata:
   name: my-monovertex
   namespace: example-namespace
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   monoVertex:
     spec:
