--- a/resources/demo-app/isbservicerollout.yaml
+++ b/resources/demo-app/isbservicerollout.yaml
@@ -3,6 +3,8 @@ kind: ISBServiceRollout
 metadata:
   name: my-isbsvc
   namespace: example-namespace
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   interStepBufferService:
     spec:
