--- a/resources/demo-app/pipeline.yaml
+++ b/resources/demo-app/pipeline.yaml
@@ -10,7 +10,7 @@ spec:
       limits:
         readBatchSize: 1
       lifecycle:
-        pauseGracePeriodSeconds: 200
+        pauseGracePeriodSeconds: 30
       vertices:
         - name: in
           scale:
@@ -18,23 +18,36 @@ spec:
             max: 1
           source:
             generator:
-              rpu: 5
+              rpu: 3
               duration: 1s
           containerTemplate:
             env:
               - name: NUMAFLOW_DEBUG
                 value: "true"
-        - name: cat-2
+        - name: cat
+          limits:
+            readBatchSize: 1
           scale:
             min: 1
             max: 1
           udf:
-            builtin:
-              name: cat
+            container: 
+              image: quay.io/numaio/numaflow-go/map-cat-sleep:v1
           containerTemplate:
             env:
               - name: NUMAFLOW_DEBUG
                 value: "true"
+        - name: cat-2
+          udf:
+            builtin:
+              name: cat
+          scale:
+            min: 1
+          containerTemplate:
+            env:
+              - name: NUMAFLOW_DEBUG
+                value: "true"
+            max: 1
         - name: out
           sink:
             log: {}
@@ -43,10 +56,8 @@ spec:
             max: 1
       edges:
         - from: in
+          to: cat
+        - from: cat
           to: cat-2
-        #- from: cat
-        #  to: cat-2
-        #- from: cat-2
-        #  to: out
         - from: cat-2
           to: out
