--- a/resources/demo-app/isbservicerollout.yaml
+++ b/resources/demo-app/isbservicerollout.yaml
@@ -2,15 +2,10 @@ apiVersion: numaplane.numaproj.io/v1alpha1
 kind: ISBServiceRollout
 metadata:
   name: my-isbsvc
-  namespace: example-namespace
-  annotations:
-    argocd.argoproj.io/sync-wave: "2"
+  namespace: demo-app
 spec:
   interStepBufferService:
-    spec:
-      # Example from https://github.com/numaproj/numaflow/blob/main/examples/0-isbsvc-jetstream.yaml
-      jetstream:
-        version: 2.9.6 # can switch 2.9.6<->2.9.8
-        persistence:
-          volumeSize: 1Gi
-        replicas: 3
+    jetstream:
+      version: 2.10.3
+      persistence:
+        volumeSize: 1Gi
