--- a/resources/demo-app/numaflowcontrollerrollout.yaml
+++ b/resources/demo-app/numaflowcontrollerrollout.yaml
@@ -1,11 +1,8 @@
 apiVersion: numaplane.numaproj.io/v1alpha1
 kind: NumaflowControllerRollout
 metadata:
-  name: numaflow-controller-0
-  namespace: example-namespace
-  annotations:
-    argocd.argoproj.io/sync-wave: "1"
+  name: my-numaflow-controller
+  namespace: demo-app
 spec:
   controller:
-    #instanceID: '0'
-    version: 1.3.3-copy1
+    version: 1.4.2
