--- a/resources/demo-app/numaflowcontrollerrollout.yaml
+++ b/resources/demo-app/numaflowcontrollerrollout.yaml
@@ -1,8 +1,8 @@
 apiVersion: numaplane.numaproj.io/v1alpha1
-kind: NumaflowControllerRollout
+kind: NumaflowController
 metadata:
-  name: my-numaflow-controller
-  namespace: demo-app
+  name: numaflowcontroller-sample
+  namespace: example-namespace
 spec:
-  controller:
-    version: 1.4.2
+  #instanceID: "0" # uncomment for Progressive rollout to set Numaflow Controller instance
+  version: "1.3.3"
