--- a/resources/demo-app/pipeline.yaml
+++ b/resources/demo-app/pipeline.yaml
@@ -24,17 +24,30 @@ spec:
             env:
               - name: NUMAFLOW_DEBUG
                 value: "true"
-        - name: cat-2
+        - name: cat
+          limits:
+            readBatchSize: 1
           scale:
             min: 1
             max: 1
           udf:
-            builtin:
-              name: cat
+            container: 
+              image: "quay.io/numaio/numaflow-go/map-slow-cat:stable"
           containerTemplate:
             env:
               - name: NUMAFLOW_DEBUG
                 value: "true"
+        - name: cat-2
+          udf:
+            builtin:
+              name: cat
+          scale:
+            min: 1
+          containerTemplate:
+            env:
+              - name: NUMAFLOW_DEBUG
+                value: "true"
+            max: 1
         - name: out
           sink:
             log: {}
@@ -43,10 +56,8 @@ spec:
             max: 1
       edges:
         - from: in
+          to: cat
+        - from: cat
           to: cat-2
-        #- from: cat
-        #  to: cat-2
-        #- from: cat-2
-        #  to: out
         - from: cat-2
           to: out
