--- a/resources/demo-app/pipeline.yaml
+++ b/resources/demo-app/pipeline.yaml
@@ -24,34 +24,17 @@ spec:
             env:
               - name: NUMAFLOW_DEBUG
                 value: "true"
-        - name: cat
-          limits:
-            readBatchSize: 1
+        - name: cat-2
           scale:
             min: 1
             max: 1
-          udf:
-            container: 
-              image: "quay.io/numaio/numaflow-go/map-slow-cat:stable"
-              env:
-                - name: SLEEP_SECONDS
-                  value: "2"
-          containerTemplate:
-            env:
-              - name: NUMAFLOW_DEBUG
-                value: "true"
-              
-        - name: cat-2
           udf:
             builtin:
               name: cat
-          scale:
-            min: 1
           containerTemplate:
             env:
               - name: NUMAFLOW_DEBUG
                 value: "true"
-            max: 1
         - name: out
           sink:
             log: {}
@@ -60,8 +43,10 @@ spec:
             max: 1
       edges:
         - from: in
-          to: cat
-        - from: cat
           to: cat-2
+        #- from: cat
+        #  to: cat-2
+        #- from: cat-2
+        #  to: out
         - from: cat-2
           to: out
