--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -99,17 +99,62 @@ data:
     hs.message = "Unknown Pipeline status"
     return hs
   resource.customizations.health.numaplane.numaproj.io_ISBServiceRollout: |
-    -- Remove this after releasing Argo CD 2.13. https://github.com/argoproj/argo-cd/pull/19077
-    local hs = {}
-    local healthyCondition = {}
+    function checkConditions(obj)
 
-    -- check for certain cases of "Progressing"
+      local hs = {}
+      local healthyCondition = {}
+      local progressiveSucceededCondition = {}
+
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "ChildResourcesHealthy" then
+            healthyCondition = condition
+          end
+          if condition.type == "ProgressiveUpgradeSucceeded" then 
+            progressiveSucceededCondition = condition
+          end
+        end
+      end
+
+      if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "ISBSvcFailed") or 
+          (progressiveSucceededCondition ~= {} and progressiveSucceededCondition.status == "False") or
+          obj.status.phase == "Failed" then
+        hs.status = "Degraded"
+        if obj.status.phase == "Failed" then
+          hs.message = obj.status.message
+        else
+          hs.message = healthyCondition.message
+        end
+        return hs
+      elseif healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "Progressing" then
+        hs.status = "Progressing"
+        hs.message = healthyCondition.message
+        return hs
+      elseif healthyCondition ~= {} and healthyCondition.status == "True" and obj.status.phase == "Deployed" then
+        hs.status = "Healthy"
+        hs.message = healthyCondition.message
+        return hs
+      end
+
+      hs.status = "Unknown"
+      hs.message = "Unknown ISBService status"
+      return hs
+    end
+
+    local hs = {}
 
     if obj.status == nil then -- if there's no Status at all, we haven't been reconciled
       hs.status = "Progressing"
       hs.message = "Not yet reconciled"
       return hs
     end
+
+    hs = checkConditions(obj)
+    if hs.status ~= "Unknown" then
+      return hs
+    end
+
+    -- check for certain cases of "Progressing"
 
     if obj.metadata.generation ~= obj.status.observedGeneration then
       hs.status = "Progressing"
@@ -129,37 +174,13 @@ data:
       return hs
     end
 
-    -- now check the Conditions
-
-    if obj.status.conditions ~= nil then
-      for i, condition in ipairs(obj.status.conditions) do
-        if condition.type == "ChildResourcesHealthy" then
-          healthyCondition = condition
-        end
-      end
-    end
-
-    if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "ISBSvcFailed") or obj.status.phase == "Failed" then
-      hs.status = "Degraded"
-      if obj.status.phase == "Failed" then
-        hs.message = obj.status.message
-      else
-        hs.message = healthyCondition.message
-      end
-      return hs
-    elseif healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "Progressing" then
-      hs.status = "Progressing"
-      hs.message = healthyCondition.message
-      return hs
-    elseif healthyCondition ~= {} and healthyCondition.status == "True" and obj.status.phase == "Deployed" then
-      hs.status = "Healthy"
-      hs.message = healthyCondition.message
-      return hs
-    end
-
     hs.status = "Unknown"
-    hs.message = "Unknown ISBService status"
+    hs.message = "Unknown Pipeline status"
     return hs
+
+  
+
+    
   resource.customizations.health.numaplane.numaproj.io_NumaflowControllerRollout: |
 
     -- Remove this after releasing Argo CD 2.13. https://github.com/argoproj/argo-cd/pull/19077
@@ -225,18 +246,75 @@ data:
     hs.message = "Unknown NumaflowController status"
     return hs
   resource.customizations.health.numaplane.numaproj.io_MonoVertexRollout: |
-    -- Remove this after releasing Argo CD 2.13. https://github.com/argoproj/argo-cd/pull/19688
-    local hs = {}
-    local healthyCondition = {}
-    local monoVertexPaused = {}
+    
+    function checkConditions(obj)
 
-    -- check for certain cases of "Progressing"
+      local hs = {}
+
+      local healthyCondition = {}
+      local pausedCondition = {}
+      local progressiveSucceededCondition = {}
+
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "ChildResourcesHealthy" then
+            healthyCondition = condition
+          end
+          if condition.type == "MonoVertexPausingOrPaused" then
+            pausedCondition = condition
+          end
+          if condition.type == "ProgressiveUpgradeSucceeded" then 
+            progressiveSucceededCondition = condition
+          end
+        end
+      end
+
+
+      if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "MonoVertexFailed") or 
+          (progressiveSucceededCondition ~= {} and progressiveSucceededCondition.status == "False") or
+          obj.status.phase == "Failed" then
+        hs.status = "Degraded"
+        if obj.status.phase == "Failed" then
+          hs.message = obj.status.message
+        else
+          hs.message = healthyCondition.message
+        end
+        return hs
+      elseif healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "Progressing" then
+        hs.status = "Progressing"
+        hs.message = healthyCondition.message
+        return hs
+      elseif (pausedCondition ~= {} and pausedCondition.status == "True") then
+        hs.status = "Suspended"
+        hs.message = pausedCondition.message
+        return hs
+      elseif healthyCondition ~= {} and healthyCondition.status == "True" and obj.status.phase == "Deployed" then
+        hs.status = "Healthy"
+        hs.message = healthyCondition.message
+        return hs
+      end
+
+      hs.status = "Unknown"
+      hs.message = "Unknown MonoVertex status"
+      return hs
+
+    end
+
+    local hs = {}
+
 
     if obj.status == nil then -- if there's no Status at all, we haven't been reconciled
       hs.status = "Progressing"
       hs.message = "Not yet reconciled"
       return hs
     end
+
+    hs = checkConditions(obj)
+    if hs.status ~= "Unknown" then
+      return hs
+    end
+
+    -- check for certain cases of "Progressing"
 
     if obj.metadata.generation ~= obj.status.observedGeneration then
       hs.status = "Progressing"
@@ -256,46 +334,14 @@ data:
       return hs
     end
 
-
-    -- now check the Conditions
-
-    if obj.status.conditions ~= nil then
-      for i, condition in ipairs(obj.status.conditions) do
-        if condition.type == "ChildResourcesHealthy" then
-          healthyCondition = condition
-        end
-        if condition.type == "MonoVertexPausingOrPaused" then
-          monoVertexPaused = condition
-        end
-      end
-    end
-
-
-    if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "MonoVertexFailed") or obj.status.phase == "Failed" then
-      hs.status = "Degraded"
-      if obj.status.phase == "Failed" then
-        hs.message = obj.status.message
-      else
-        hs.message = healthyCondition.message
-      end
-      return hs
-    elseif healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "Progressing" then
-      hs.status = "Progressing"
-      hs.message = healthyCondition.message
-      return hs
-    elseif (monoVertexPaused ~= {} and monoVertexPaused.status == "True") then
-      hs.status = "Suspended"
-      hs.message = monoVertexPaused.message
-      return hs
-    elseif healthyCondition ~= {} and healthyCondition.status == "True" and obj.status.phase == "Deployed" then
-      hs.status = "Healthy"
-      hs.message = healthyCondition.message
-      return hs
-    end
-
     hs.status = "Unknown"
-    hs.message = "Unknown MonoVertex status"
+    hs.message = "Unknown Pipeline status"
     return hs
+
+
+    
+
+    
   resource.customizations.actions.numaplane.numaproj.io_PipelineRollout: |
     discovery.lua: |
       local actions = {}
