--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -242,90 +242,124 @@ data:
     hs.message = "Unknown NumaflowController status"
     return hs
   resource.customizations.health.numaplane.numaproj.io_MonoVertexRollout: |
-    
-    function checkConditions(obj)
 
-      local hs = {}
+    -- return true if progressing, along with the reason
+    function isProgressing(obj) 
+      -- if there's no Status at all, we haven't been reconciled
+      if obj.status == nil then 
+        return true, "Not yet reconciled"
+      end
 
-      local healthyCondition = {}
-      local pausedCondition = {}
-      local progressiveSucceededCondition = {}
+      if obj.metadata.generation ~= obj.status.observedGeneration then
+        return true, "Not yet reconciled"
+      end
+
+      -- if we are in the middle of an upgrade
+      if obj.status.upgradeInProgress ~= nil and obj.status.upgradeInProgress ~= "" or obj.status.phase == "Pending" then
+        -- first check if Progressive Upgrade Failed; in that case, we won't return true (because "Degraded" will take precedence)
+        progressiveUpgradeFailed = false
+        if obj.status.conditions ~= nil then
+          for i, condition in ipairs(obj.status.conditions) do
+            if condition.type == "ProgressiveUpgradeSucceeded" and condition.status == "False" then
+              progressiveUpgradeFailed = true
+            end
+          end
+        end
+
+        if progressiveUpgradeFailed == false then
+          return true, "Update in progress"
+        end
+      end
+
+      -- if the child is Progressing
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "ChildResourcesHealthy" and condition.status == "False" and healthyCondition.reason == "Progressing" then
+            return true, "Child Progressing"
+        end
+      end
+
+      return false, ""
+    end
+
+    -- return true if degraded, along with the reason
+    function isDegraded(obj) 
+      if obj.status == nil then 
+        return false, ""
+      end
+      -- check phase=Failed, healthy condition failed, progressive upgrade failed
+      if obj.status.phase == "Failed" then
+        return true, obj.status.message
+      end
 
       if obj.status.conditions ~= nil then
         for i, condition in ipairs(obj.status.conditions) do
-          if condition.type == "ChildResourcesHealthy" then
+          if condition.type == "ChildResourcesHealthy" and healthyCondition.status == "False" and healthyCondition.reason == "MonoVertexFailed" then
+            return true, condition.message
+          elseif condition.type == "ProgressiveUpgradeSucceeded" and condition.status == "False" then
+            return true, "Progressive upgrade failed"
+          end
+        end
+      end
+
+      return false, ""
+    end
+
+    -- return true if paused, along with the reason
+    function isPaused(obj)
+      if obj.status == nil then 
+        return false, ""
+      end
+
+      if obj.status.conditions ~= nil then
+          if condition.type == "MonoVertexPausingOrPaused" and condition.status == "True" then
+            return true, pausedCondition.message
+          end
+        end
+      end
+
+    end
+
+    -- return true if healthy, along with the reason
+    function isHealthy(obj)
+      if obj.status == nil then 
+        return false, ""
+      end
+
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "ChildResourcesHealthy" and condition.status == true then
             healthyCondition = condition
           end
-          if condition.type == "MonoVertexPausingOrPaused" then
-            pausedCondition = condition
-          end
-          if condition.type == "ProgressiveUpgradeSucceeded" then 
-            progressiveSucceededCondition = condition
-          end
         end
       end
-
-
-      if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "MonoVertexFailed") or 
-          (progressiveSucceededCondition ~= {} and progressiveSucceededCondition.status == "False") or
-          obj.status.phase == "Failed" then
-        hs.status = "Degraded"
-        if obj.status.phase == "Failed" then
-          hs.message = obj.status.message
-        else
-          hs.message = healthyCondition.message
-        end
-        return hs
-      elseif healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "Progressing" then
-        hs.status = "Progressing"
-        hs.message = healthyCondition.message
-        return hs
-      elseif (pausedCondition ~= {} and pausedCondition.status == "True") then
-        hs.status = "Suspended"
-        hs.message = pausedCondition.message
-        return hs
-      elseif healthyCondition ~= {} and healthyCondition.status == "True" and obj.status.phase == "Deployed" then
-        hs.status = "Healthy"
-        hs.message = healthyCondition.message
-        return hs
-      end
-
-      hs.status = "Unknown"
-      hs.message = "Unknown MonoVertex status"
-      return hs
-
     end
 
     local hs = {}
 
 
-    if obj.status == nil then -- if there's no Status at all, we haven't been reconciled
+    progressing, reason = isProgressing(obj)
+    if progressing then
       hs.status = "Progressing"
-      hs.message = "Not yet reconciled"
-      return hs
+      hs.message = reason
     end
 
-    if obj.metadata.generation ~= obj.status.observedGeneration then
-      hs.status = "Progressing"
-      hs.message = "Not yet reconciled"
-      return hs
+    degraded, reason = isDegraded(obj)
+    if degraded then
+      hs.status = "Degraded"
+      hs.message = reason
     end
 
-    if obj.status.upgradeInProgress ~= nil and obj.status.upgradeInProgress ~= "" then
-      hs.status = "Progressing"
-      hs.message = "Update in progress"
-      return hs
+    paused, reason = isPaused(obj)
+    if paused then 
+      hs.status = "Suspended"
+      hs.message = reason
     end
 
-    hs = checkConditions(obj)
-    if hs.status ~= "Unknown" then
-      return hs
-    end
-
-    if obj.status.phase == "Pending" then
-      hs.status = "Progressing"
-      hs.message = "Phase=Pending"
-      return hs
+    healthy, reason = isHealthy(obj)
+    if healthy then
+      hs.status = "Healthy"
+      hs.message = reason
     end
 
     hs.status = "Unknown"
